--- a/packages/stateofjs/lib/stylesheets/_survey_page.scss
+++ b/packages/stateofjs/lib/stylesheets/_survey_page.scss
@@ -11,7 +11,7 @@
 }
 .survey-image {
   max-width: 600px;
-  margin: 0 auto $spacing/2 auto;
+  margin: 0 auto $spacing * 2 auto;
   img {
     display: block;
     width: 100%;
