--- a/packages/stateofjs/lib/stylesheets/_forms.scss
+++ b/packages/stateofjs/lib/stylesheets/_forms.scss
@@ -40,7 +40,7 @@
       font-size: $medium-font;
     }
     .entity-label{
-      white-space: nowrap;
+      // white-space: nowrap;
     }
     .question-label-new {
       text-transform: uppercase;
