--- a/packages/stateofjs/lib/stylesheets/main.scss
+++ b/packages/stateofjs/lib/stylesheets/main.scss
@@ -25,4 +25,5 @@
 @import '_translators.scss';
 @import '_faq.scss';
 @import '_admin.scss';
+@import '_support.scss';
 @import '_rtl_support.scss';
