Make check input labels clickable

--- a/packages/stateofjs/lib/stylesheets/_forms.scss
+++ b/packages/stateofjs/lib/stylesheets/_forms.scss
@@ -83,6 +83,7 @@
   .form-check-label {
     flex: 1;
     padding: $spacing/1.5 0;
+    cursor: pointer;
   }
   .form-item-contents {
     display: flex;
