Get survey ready

--- a/packages/stateofjs/lib/stylesheets/_forms.scss
+++ b/packages/stateofjs/lib/stylesheets/_forms.scss
@@ -196,3 +196,8 @@
 .form-floating > label{
   color: var(--text-color-inverted);
 }
+
+.rbt-token-remove-button{
+  border: none;
+  background: none;
+}
